--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LSA Luthfi</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="navbar-container">
+        <div class="logo">
+            <h2>LSA Luthfi</h2>
+        </div>
+        <nav class="nav-list">
+            <ul>
+                <li><a href="#">Beranda</a></li>
+                <li><a href="#">Tentang</a></li>
+                <li><a href="#">Sertifikat</a></li>
+                <li><a href="#">Kontak</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
