--- a/index.html
+++ b/index.html
@@ -20,5 +20,17 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <div class="content">
+    <div class="content-description">
+        <h1 class="title">Full Time Trader</h1>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem in, saepe fugit consectetur quisquam sit consequuntur officiis, provident cumque porro tempora, perferendis corporis pariatur nemo vel quo. Culpa, odio explicabo.
+        </p>
+        <button>Kolaborasi</button>
+    </div>
+</div>
+</main>
 </body>
 </html>
