--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         </p>
         <button>Kolaborasi</button>
     </div>
+    <div> class="content-image">
+    </div>
 </div>
 </main>
 </body>
