--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </p>
         <button>Kolaborasi</button>
     </div>
-    <div> class="content-image">
-    </div>
+    <div class="content-image"></div>
+    <img src="img/luthfi.png.jpg" alt="Profile">
 </div>
 </main>
 </body>
