--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button>Kolaborasi</button>
     </div>
     <div class="content-image"></div>
-    <img src="img/luthfi.png" alt="Profile">
+    <img src="img/luthfi.jpg" alt="Profile">
 </div>
 </main>
 </body>
