--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <div class="content">
     <div class="content-description">
         <h1 class="title">Full Time Trader</h1>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem in, saepe fugit consectetur quisquam sit consequuntur officiis, provident cumque porro tempora, perferendis corporis pariatur nemo vel quo. Culpa, odio explicabo.
+        <p> Website ini berisi stockpick saham harian maupun swing. Segala keputusan jual dan beli saham menjadi resiko masing masing
         </p>
         <button>Kolaborasi</button>
     </div>
