--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LSA Luthfi</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="navbar-container">
@@ -37,14 +37,14 @@
     <div class="social-media"></div>
     <ul>
         <li>
-            <a href=""><i class="fab fa-youtube"</i></a>
+            <a href=""><i class="fab fa-youtube"></i></a>
             </li>
         <li>
-            <a href=""><i class="fab fa-linked-in"</i></a>
+            <a href=""><i class="fab fa-linked-in"></i></a>
             </li>
-        <li><a href=""><i class="fab fa-instagram"</i></a>
+        <li><a href=""><i class="fab fa-instagram"></i></a>
         </li>
-        <li><a href=""><i class="fab fa-facebook"</i></a>
+        <li><a href=""><i class="fab fa-facebook"></i></a>
         </li>
     </ul>
 </aside>
