--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LSA Luthfi</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/ >
 </head>
 <body>
     <header class="navbar-container">
@@ -38,13 +38,15 @@
     <ul>
         <li>
             <a href=""><i class="fab fa-youtube"></i></a>
-            </li>
+        </li>
         <li>
             <a href=""><i class="fab fa-linked-in"></i></a>
-            </li>
-        <li><a href=""><i class="fab fa-instagram"></i></a>
         </li>
-        <li><a href=""><i class="fab fa-facebook"></i></a>
+        <li>
+            <a href=""><i class="fab fa-instagram"></i></a>
+        </li>
+        <li>
+            <a href=""><i class="fab fa-facebook"></i></a>
         </li>
     </ul>
 </aside>
