--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <img src="img/luthfi.png" alt="Profile">
 </div>
 <aside>
-    <div class="social-media"></div>
+    <div class="social-media">
     <ul>
         <li>
             <a href=""><i class="fab fa-youtube"></i></a>
@@ -49,6 +49,7 @@
             <a href=""><i class="fab fa-facebook"></i></a>
         </li>
     </ul>
+</div>
 </aside>
 </main>
 </body>
