--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href=""><i class="fab fa-youtube"></i></a>
         </li>
         <li>
-            <a href=""><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://id.linkedin.com/in/la-ode-saktika-awaludin-luthfi-a36a7b153"><i class="fab fa-linkedin-in"></i></a>
         </li>
         <li>
             <a href=""><i class="fab fa-instagram"></i></a>
