--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="https://id.linkedin.com/in/la-ode-saktika-awaludin-luthfi-a36a7b153"><i class="fab fa-linkedin-in"></i></a>
         </li>
         <li>
-            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/lsaluthfi/"><i class="fab fa-instagram"></i></a>
         </li>
         <li>
             <a href=""><i class="fab fa-facebook"></i></a>
